Round notifications in UnifiedSystemTray.

This CL rounds notification corners properly and adds separators between
notifications.

The notifications at the top and at the bottom should have rounded
corners. This CL
* Adds MessageView::UpdateCornerRadius(). Some subclasses e.g. ARC++
  notification does not use default background of MessageView, so they
  override this method to implement their own corner rounding.
* Removes sidebar_enabled flag and set border directly from
  UnifiedMessageCenterView. 1px #DFE0E0 solid border is added between
  notifications. (The color is not final but mentioned in the bug.)

Screenshot: http://screen/ZbG9fzvZZ13
UX spec: http://shortn/_LO6ro9tLZK

BUG=846181
TEST=manual

Change-Id: Ib36ff38955a9d9351726134b4294c380570c3a90
Reviewed-on: https://chromium-review.googlesource.com/1078408
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562782}
Former-commit-id: b53e06c09df102d925273795aa89e83b3b285966